--- a/src/app/component/content/content.component.html
+++ b/src/app/component/content/content.component.html
@@ -1,14 +1,16 @@
-<div *ngIf="availabilityService.searched && !availabilityService.loading && !availabilityService.availableItems.length">
-  <h2>No Result Found</h2>
+<div class="loading-spinner" *ngIf="availabilityService.loading">
+  <app-loading-spinner></app-loading-spinner>
 </div>
-<div *ngIf="availabilityService.searched && !availabilityService.loading && availabilityService.availableItems.length">
+<div *ngIf="!availabilityService.loading">
+  <p>{{availabilityService.availableItems.length}} Record{{availabilityService.availableItems.length > 1 ? "s" : ""}} Found</p>
   <table class="table">
     <thead class="thead-dark">
       <tr>
         <th scope="col">Department</th>
-        <th scope="col">Product</th>
+        <th scope="col" class="hovered" (click)="reorder('product')">Product &#8597;</th>
         <th scope="col">Amount</th>
         <th scope="col">Location</th>
+        <th scope="col" class="hovered" (click)="reorder('location')">Zip Code &#8597;</th>
       </tr>
     </thead>
     <tbody>
@@ -17,6 +19,7 @@
         <td>{{availableItem.product.productName}}</td>
         <td>{{availableItem.amount}}</td>
         <td>{{availableItem.location.locName}}</td>
+        <td>{{availableItem.location.zipCode}}</td>
       </tr>
     </tbody>
   </table>
