--- a/src/app/component/search/search.component.css
+++ b/src/app/component/search/search.component.css
@@ -2,11 +2,26 @@
   margin: 0 5% 0 8%;
 }
 
-select {
+select, input {
   max-width: 260px;
 }
 
 button {
   width: 100px;
   margin-right: 10px;
+}
+
+p {
+  font-size: small;
+  color: #0000EE;
+  margin-top: 5px;
+}
+
+p:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+span, .errorMsg {
+  color: red;
 }
