--- a/src/app/component/search/search.component.html
+++ b/src/app/component/search/search.component.html
@@ -1,5 +1,5 @@
 <div class="filter-form" *ngIf="allLocations.length && allDepartments.length && allProducts.length">
-  <h3>Filter By</h3>
+  <h3>{{filterByLocation ? "Filter" : 'Search'}} By</h3>
   <br>
   <div class="form-group">
     <label for="dept-option">Department:</label>
@@ -9,21 +9,35 @@
     </select>
   </div>
   <div class="form-group">
-    <label for="prod-option">Product:</label>
+    <label for="prod-option">Product: <span *ngIf="!filterByLocation">*</span></label>
     <select id="prod-option" class="form-control" [(ngModel)]="selectedProduct">
       <option selected value="0"></option>
       <option *ngFor="let prod of filterProducts" [ngValue]="prod.id">{{prod.productName}}</option>
     </select>
   </div>
-  <div class="form-group">
+  <div class="form-group"  *ngIf="filterByLocation">
     <label for="loc-option">Location:</label>
     <select id="loc-option" class="form-control" [(ngModel)]="selectedLocation">
       <option selected value="0"></option>
       <option *ngFor="let loc of allLocations" [ngValue]="loc.id">{{loc.locName}}</option>
     </select>
+    <p (click)="toggleSearchMethod()">Find Nearest Location</p>
+  </div>
+  <div class="form-group"  *ngIf="!filterByLocation">
+    <div class="form-group">
+      <label for="zipCode">Zip Code: <span>*</span></label>
+      <input type="text" id="zipCode" class="form-control" placeholder="Enter 5 Digits Zip Code" required [(ngModel)]="givenZipCode">
+      <small class="errorMsg" *ngIf="!validZipCode">Invalid Zip Code</small>
+    </div>
+    <div class="form-group">
+      <label for="radius">Radius (Miles):</label>
+      <input type="number" id="radius" class="form-control" placeholder="0" min="0" max="10000" [(ngModel)]="givenRadius">
+    </div>
+    <p (click)="toggleSearchMethod()">Filter By Location</p>
   </div>
   <div class="form-group">
     <button class="btn btn-outline-secondary" (click)="clearFilter()">Clear</button>
-    <button class="btn btn-outline-primary" (click)="filterByCondition()">Filter</button>
+    <button class="btn btn-outline-primary" (click)="filterByCondition()" *ngIf="filterByLocation">Filter</button>
+    <button class="btn btn-outline-primary" (click)="searchNearestLocation()" *ngIf="!filterByLocation" [disabled]="!selectedProduct || !givenZipCode">Search</button>
   </div>
 </div>
