--- a/src/app/component/search/search.component.html
+++ b/src/app/component/search/search.component.html
@@ -30,11 +30,11 @@
       <small class="errorMsg" *ngIf="!validZipCode">Invalid Zip Code</small>
     </div>
     <div class="form-group">
-      <label for="radius">Radius (Miles):</label>
+      <label for="radius">Radius (Mile):</label>
       <input type="number" id="radius" class="form-control" placeholder="0" min="0" max="18" [(ngModel)]="givenRadius">
-      <small class="errorMsg" *ngIf="!validRadius">Radius can only between 0 to 18 miles</small>
+      <small class="errorMsg" *ngIf="!validRadius">Radius can only between 0 to 18.6 miles</small>
     </div>
-    <p (click)="toggleSearchMethod()">Filter By Location</p>
+    <p (click)="toggleSearchMethod()">Filter By Given Location</p>
   </div>
   <div class="form-group">
     <button class="btn btn-outline-secondary" (click)="clearFilter()">Clear</button>
