--- a/src/app/component/content/content.component.css
+++ b/src/app/component/content/content.component.css
@@ -15,3 +15,12 @@ thead .hovered:hover {
   text-align: center;
   margin-top: 10vh;
 }
+
+button {
+  margin-right: 5px;
+  font-size: smaller;
+}
+
+#content-table {
+  min-height: 60vh;
+}
