--- a/src/app/component/content/content.component.html
+++ b/src/app/component/content/content.component.html
@@ -2,27 +2,43 @@
   <app-loading-spinner></app-loading-spinner>
 </div>
 <div *ngIf="!availabilityService.loading">
-  <p>{{availabilityService.availableItems.length}} Record{{availabilityService.availableItems.length > 1 ? "s" : ""}} Found</p>
-  <table class="table">
-    <thead class="thead-dark">
-      <tr>
-        <th scope="col">Department</th>
-        <th scope="col" class="hovered" (click)="reorder('product')">Product &#8597;</th>
-        <th scope="col">Amount</th>
-        <th scope="col">Location</th>
-        <th scope="col" class="hovered" (click)="reorder('location')">Zip Code &#8597;</th>
-        <th scope="col" class="hovered" (click)="reorder('distance')" *ngIf="availabilityService.showDistance">Distance (mile) &#8597;</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr class="hovered" *ngFor="let availableItem of availabilityService.availableItems">
-        <td>{{availableItem.product.dept.deptName}}</td>
-        <td>{{availableItem.product.productName}}</td>
-        <td>{{availableItem.amount}}</td>
-        <td>{{availableItem.location.locName}}</td>
-        <td>{{availableItem.location.zipCode}}</td>
-        <td *ngIf="availabilityService.showDistance">{{availableItem.distance}}</td>
-      </tr>
-    </tbody>
-  </table>
+  <p>{{availabilityService.numberOfItem}} Record{{availabilityService.availableItems.length > 1 ? "s" : ""}} Found</p>
+  <div id="content-table">
+    <table class="table">
+      <thead class="thead-dark">
+        <tr>
+          <th scope="col">Department</th>
+          <th scope="col">Product</th>
+          <th scope="col" class="hovered">Amount &#8597;</th>
+          <th scope="col">Location</th>
+          <th scope="col">Zip Code</th>
+          <th scope="col" class="hovered" (click)="reorder('distance')" *ngIf="availabilityService.showDistance">Distance &#8597;</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr class="hovered" *ngFor="let availableItem of availabilityService.availableItems">
+          <td>{{availableItem.product.dept.deptName}}</td>
+          <td>{{availableItem.product.productName}}</td>
+          <td>{{availableItem.amount}}</td>
+          <td>{{availableItem.location.locName}}</td>
+          <td>{{availableItem.location.zipCode}}</td>
+          <td *ngIf="availabilityService.showDistance">{{availableItem.distance}} Miles</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <br>
+  <div id="pageSelector" class="text text-center">
+    <button class="btn btn-outline-info" [disabled]="availabilityService.currentPage===1" (click)="changePage(availabilityService.currentPage-1)">&#8249;</button>
+    <button [ngClass]="availabilityService.currentPage===1?'btn btn-info':'btn btn-outline-info'" [disabled]="availabilityService.currentPage===1" (click)="changePage(1)">1</button>
+    <button class="btn btn-outline-white btn-sm" disabled *ngIf="availabilityService.currentPage-2>1">&#8230;</button>
+    <button class="btn btn-outline-info" *ngIf="availabilityService.currentPage===availabilityService.totalPage && availabilityService.totalPage>4" (click)="changePage(availabilityService.currentPage-2)">{{availabilityService.currentPage-2}}</button>
+    <button class="btn btn-outline-info" *ngIf="availabilityService.currentPage>2" (click)="changePage(availabilityService.currentPage-1)">{{availabilityService.currentPage-1}}</button>
+    <button class="btn btn-info" *ngIf="availabilityService.currentPage!==1 && availabilityService.currentPage!==availabilityService.totalPage" disabled>{{availabilityService.currentPage}}</button>
+    <button class="btn btn-outline-info" *ngIf="availabilityService.totalPage-1>availabilityService.currentPage" (click)="changePage(availabilityService.currentPage+1)">{{availabilityService.currentPage+1}}</button>
+    <button class="btn btn-outline-info" *ngIf="availabilityService.currentPage===1 && availabilityService.totalPage>4" (click)="changePage(availabilityService.currentPage+2)">{{availabilityService.currentPage+2}}</button>
+    <button class="btn btn-outline-white btn-sm" disabled *ngIf="availabilityService.totalPage-availabilityService.currentPage>2">&#8230;</button>
+    <button *ngIf="availabilityService.totalPage>1" [ngClass]="availabilityService.currentPage===availabilityService.totalPage?'btn btn-info':'btn btn-outline-info'" [disabled]="availabilityService.currentPage===availabilityService.totalPage" (click)="changePage(availabilityService.totalPage)">{{availabilityService.totalPage}}</button>
+    <button class="btn btn-outline-info" [disabled]="availabilityService.currentPage>=availabilityService.totalPage" (click)="changePage(availabilityService.currentPage+1)">&#8250;</button>
+  </div>
 </div>
