--- a/src/app/component/search/search.component.html
+++ b/src/app/component/search/search.component.html
@@ -3,21 +3,21 @@
   <br>
   <div class="form-group">
     <label for="dept-option">Department:</label>
-    <select id="dept-option" class="form-control" [(ngModel)]="selectedDepartment" (change)="changeDept()">
+    <select id="dept-option" class="form-control" [(ngModel)]="balanceService.selectedDepartment" (change)="changeDept()">
       <option selected value="0"></option>
       <option *ngFor="let dept of allDepartments" [ngValue]="dept.id">{{dept.deptName}}</option>
     </select>
   </div>
   <div class="form-group">
     <label for="prod-option">Product: <span *ngIf="!filterByLocation">*</span></label>
-    <select id="prod-option" class="form-control" [(ngModel)]="selectedProduct">
+    <select id="prod-option" class="form-control" [(ngModel)]="balanceService.selectedProduct">
       <option selected value="0"></option>
       <option *ngFor="let prod of filterProducts" [ngValue]="prod.id">{{prod.productName}}</option>
     </select>
   </div>
   <div class="form-group"  *ngIf="filterByLocation">
     <label for="loc-option">Location:</label>
-    <select id="loc-option" class="form-control" [(ngModel)]="selectedLocation">
+    <select id="loc-option" class="form-control" [(ngModel)]="balanceService.selectedLocation">
       <option selected value="0"></option>
       <option *ngFor="let loc of allLocations" [ngValue]="loc.id">{{loc.locName}}</option>
     </select>
@@ -38,7 +38,7 @@
   </div>
   <div class="form-group">
     <button class="btn btn-outline-secondary" (click)="clearFilter()">Clear</button>
-    <button class="btn btn-outline-primary" (click)="filterByCondition()" *ngIf="filterByLocation">Filter</button>
-    <button class="btn btn-outline-primary" (click)="searchNearestLocation()" *ngIf="!filterByLocation" [disabled]="!selectedProduct  || selectedProduct === '0' || !givenZipCode">Search</button>
+    <button class="btn btn-outline-info" (click)="filterByCondition()" *ngIf="filterByLocation">Filter</button>
+    <button class="btn btn-outline-info" (click)="searchNearestLocation()" *ngIf="!filterByLocation" [disabled]="!balanceService.selectedProduct  || balanceService.selectedProduct === '0' || !givenZipCode">Search</button>
   </div>
 </div>
