--- a/src/app/component/content/content.component.css
+++ b/src/app/component/content/content.component.css
@@ -44,3 +44,21 @@ input:focus {
 #goto-page-btn {
   margin: 0 3px 0 100px;
 }
+
+.search-condition {
+  margin-right: 20px;
+  border: 1px solid #f2f2f2;
+  border-radius: 10px;
+  padding: 5px;
+  background-color: #f8f8f8;
+  font-weight: 600;
+}
+
+.remove-condition {
+  color: darkred;
+  margin-left: 10px;
+}
+
+.remove-condition:hover {
+  cursor: pointer;
+}
