--- a/src/app/component/search/search.component.html
+++ b/src/app/component/search/search.component.html
@@ -4,22 +4,22 @@
   <div class="form-group">
     <label for="dept-option">Department:</label>
     <select id="dept-option" class="form-control" [(ngModel)]="balanceService.selectedDepartment" (change)="changeDept()">
-      <option selected value="0"></option>
-      <option *ngFor="let dept of allDepartments" [ngValue]="dept.id">{{dept.deptName}}</option>
+      <option selected value=""></option>
+      <option *ngFor="let dept of allDepartments" [ngValue]="dept">{{dept.deptName}}</option>
     </select>
   </div>
   <div class="form-group">
     <label for="prod-option">Product: <span *ngIf="!filterByLocation">*</span></label>
     <select id="prod-option" class="form-control" [(ngModel)]="balanceService.selectedProduct">
-      <option selected value="0"></option>
-      <option *ngFor="let prod of filterProducts" [ngValue]="prod.id">{{prod.productName}}</option>
+      <option selected value=""></option>
+      <option *ngFor="let prod of filterProducts" [ngValue]="prod">{{prod.productName}}</option>
     </select>
   </div>
   <div class="form-group"  *ngIf="filterByLocation">
     <label for="loc-option">Location:</label>
     <select id="loc-option" class="form-control" [(ngModel)]="balanceService.selectedLocation">
-      <option selected value="0"></option>
-      <option *ngFor="let loc of allLocations" [ngValue]="loc.id">{{loc.locName}}</option>
+      <option selected value=""></option>
+      <option *ngFor="let loc of allLocations" [ngValue]="loc">{{loc.locName}}</option>
     </select>
     <p (click)="toggleSearchMethod()">Find Nearest Location</p>
   </div>
@@ -37,7 +37,7 @@
                  placeholder="0" min=0 step="0.5" [max]="availabilityService.unit==='Mile' ? 18.6 : 30" 
                  [(ngModel)]="givenRadius">
         </div>
-        <div class="col-sm-4">     
+        <div class="col-sm-4">
           <select name="unit-selector" class="custom-select" [(ngModel)]="availabilityService.unit">
             <option value="Mile">Mile</option>
             <option value="Km">Km</option>
