--- a/src/app/component/search/search.component.html
+++ b/src/app/component/search/search.component.html
@@ -4,7 +4,7 @@
       <h3>{{filterByLocation ? "Filter" : 'Search'}} By</h3>
     </div>
     <div class="col-sm-2">
-      <span id="reload" (click)="reload()"><i [ngClass]="loadingData? 'fa fa-refresh fa-spin' : 'fa fa-refresh'"></i></span>
+      <span id="reload" (click)="reload()"><i [ngClass]="loadingData? 'fa fa-circle-o-notch fa-spin' : 'fa fa-circle-o-notch'"></i></span>
     </div>
   </div>
 </div>
