--- a/src/app/component/search/search.component.css
+++ b/src/app/component/search/search.component.css
@@ -30,4 +30,10 @@ span, .errorMsg {
   color: gray;
   cursor: pointer;
   font-size: 1.3em;
+  border: 1px solid black;
+  padding: 0 10px 0 10px;
+}
+
+#reload:hover {
+  background-color: whitesmoke;
 }
