--- a/src/app/component/search/search.component.css
+++ b/src/app/component/search/search.component.css
@@ -30,7 +30,7 @@ span, .errorMsg {
   color: gray;
   cursor: pointer;
   font-size: 1.3em;
-  border: 1px solid black;
+  border: 1px solid lightgray;
   padding: 0 10px 0 10px;
 }
 
